# sample_cpp_project

./: .gitignore  CMakeLists.txt  Doxyfile  benchmark_8cpp.html  benchmark_8cpp__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main.cpp  my__add_8cpp.html  test_add.cpp
.github/workflows/: doxygen.yaml  jekyll-gh-pages.yml  test.yaml
include/: my_add.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
src/: benchmark.cpp  my_add.cpp
tests/: test_add.cpp
